objects/Health_Wellness_Program__c.object
<CustomObject>
    <description>At the Opportunity level, to track the H&amp;W program</description>
    <fields>
        <fullName>Baseline_Intro_Letter_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Baseline Intro Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Build_Health_and_Wellness_Package__c</fullName>
        <label>Build Health &amp; Wellness Package</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All In</fullName>
                </value>
                <value>
                    <fullName>Biometric Screening</fullName>
                </value>
                <value>
                    <fullName>Biometric Screening Pooled</fullName>
                </value>
                <value>
                    <fullName>Cooking Demo</fullName>
                </value>
                <value>
                    <fullName>Fitness or Nutrition Seminars</fullName>
                </value>
                <value>
                    <fullName>Get More</fullName>
                </value>
                <value>
                    <fullName>Get Moving</fullName>
                </value>
                <value>
                    <fullName>Get Smart</fullName>
                </value>
                <value>
                    <fullName>Massage Therapy</fullName>
                </value>
                <value>
                    <fullName>Mental Health Seminars</fullName>
                </value>
                <value>
                    <fullName>Mobile Health Core</fullName>
                </value>
                <value>
                    <fullName>Mobile Health Core Plus</fullName>
                </value>
                <value>
                    <fullName>Online Activity Challenge (Anthem Vendor)</fullName>
                </value>
                <value>
                    <fullName>Online Wellness Survey (KTC)</fullName>
                </value>
                <value>
                    <fullName>Onsite Nutrition Class</fullName>
                </value>
                <value>
                    <fullName>Preventive Health Seminars</fullName>
                </value>
                <value>
                    <fullName>Stress Management Seminars</fullName>
                </value>
                <value>
                    <fullName>Weight Management Seminars</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Wellness_Advantage__c</fullName>
        <inlineHelpText>Users are allowed to select which level of benefits the client has</inlineHelpText>
        <label>H&amp;W Advantage Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B - Baseline</fullName>
                </value>
                <value>
                    <fullName>ESS - Essential</fullName>
                </value>
                <value>
                    <fullName>ENH - Enhanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Health_Consumer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Users will be able to capture all of the data related to the Mobile Health Consumer on the opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Health &amp; Wellness</relationshipLabel>
        <relationshipName>Mobile_Health_Consumers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Webinar_Attendee__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Webinar Attendee</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webinar_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Webinar Completion Date</label>
        <type>Date</type>
    </fields>
    <label>Health &amp; Wellness Program</label>
    <nameField>
        <displayFormat>1-{000}</displayFormat>
        <label>H&amp;W Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health &amp; Wellness Program</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>